# litcurator

./: README.md  curate.py  pyproject.toml
apps/: curation_feed.py  curation_labeler.py  curation_review.py  domain_feed.py  profile_builder.py  relevance_labeler.py
src/litcurator/: cli.py  config.py  db.py  db_interface.py  domain_filter.py  evaluate.py  judge.py  judge_harness.py  label.py  pipeline.py  profile_analysis.py  profile_interface.py  prompt_interface.py  rank.py  retrieve.py  summarize.py
src/litcurator/apps/: curation_labeler.py  profile_workbench.py  prompt_workbench.py  relevance_labeler.py  review_feed.py
