[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "litcurator"
version = "0.0.1"
description = "litcurator: LLM-powered pubmed literature extraction"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.12"
authors = [{ name = "Eric Thomson", email = "thomson.eric@gmail.com" }]
dependencies = [
    "requests",
    "anthropic",
    "python-dotenv",
    "streamlit",
]

[project.scripts]
litcurator = "litcurator.label:main"

[tool.uv.build-backend]
module-root = "src"
